--- a/server-java/src/main/resources/templates/add-user.html
+++ b/server-java/src/main/resources/templates/add-user.html
@@ -21,7 +21,7 @@
             <a th:href="@{/ui/}" class="navbar-left"><img width="150px" th:src="@{/img/logo_transparent.png}"/></a>
         </div>
         <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li class="active"><a th:href="@{/ui/}">Home</a></li>
             <li><a th:href="@{/ui/health-problems}">Problemy zdrowotne</a></li>
             <li><a th:href="@{/ui/suplements}">Suplementy</a></li>
             <li><a th:href="@{/ui/contact}">Kontakt</a></li>
