--- a/server-java/src/main/resources/templates/suplements.html
+++ b/server-java/src/main/resources/templates/suplements.html
@@ -29,6 +29,7 @@
     </div>
 </nav>
 <div class="container">
+    <a th:href="@{/ui/suplements/new}" class="btn btn-info" role="button">Dodaj nowy</a>
     <table class="table">
         <thead>
         <tr>
@@ -45,6 +46,7 @@
             <td th:text="${suplement.linkUrl}"></td>
             <td th:text="${suplement.howTo}"></td>
             <td><a th:href="'/ui/suplements/' + ${suplement.id}" class="btn btn-info" role="button">Edytuj</a></td>
+            <td><a th:href="'/ui/suplements/remove/' + ${suplement.id}" class="btn btn-info" role="button">Usuń</a></td>
         </tr>
         </tbody>
     </table>
