--- a/server-java/src/main/resources/templates/health-problems.html
+++ b/server-java/src/main/resources/templates/health-problems.html
@@ -30,6 +30,7 @@
 </nav>
 
 <div class="container">
+    <a th:href="@{/ui/health-problems/new}" class="btn btn-info" role="button">Dodaj nowy</a>
     <table class="table">
         <thead>
         <tr>
@@ -45,6 +46,7 @@
             <td th:text="${healthProblem.description}"></td>
             <td th:text="${healthProblem.cause}"></td>
             <td><a th:href="'/ui/health-problems/' + ${healthProblem.id}" class="btn btn-info" role="button">Edytuj</a></td>
+            <td><a th:href="'/ui/health-problems/remove/' + ${healthProblem.id}" class="btn btn-info" role="button">Usuń</a></td>
         </tr>
         <tr>
             <td>Suplementy na podane dolegliwości:</td>
