--- a/server-java/src/main/resources/templates/suplements.html
+++ b/server-java/src/main/resources/templates/suplements.html
@@ -25,6 +25,7 @@
             <li><a th:href="@{/ui/health-problems}">Problemy zdrowotne</a></li>
             <li><a th:href="@{/ui/suplements}">Suplementy</a></li>
             <li><a th:href="@{/ui/contact}">Kontakt</a></li>
+            <li><a th:href="@{/logout}">Wyloguj</a></li>
         </ul>
     </div>
 </nav>
