--- a/server-java/src/main/resources/templates/edit-suplement.html
+++ b/server-java/src/main/resources/templates/edit-suplement.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html lang="pl" xmlns:th="http://www.thymeleaf.org">
+<html lang="pl" xmlns:th="http://www.thymeleaf.org"
+      xmlns:sec="http://www.thymeleaf.org/thymeleaf-extras-springsecurity4">
 <head>
     <meta charset="utf-8"/>
     <meta http-equiv="X-UA-Compatible" content="IE=edge"/>
@@ -49,7 +50,7 @@
 
         </div>
 
-        <button type="submit" class="btn btn-primary">Zapisz</button>
+        <button sec:authorize="hasRole('ROLE_ADMIN')" type="submit" class="btn btn-primary">Zapisz</button>
     </form>
 
 </div>
